@@ -33,24 +33,16 @@
             <div metal:define-slot="inside" tal:replace="structure text">The body</div>
         </div>
 
-        <metal:listingmacro define-macro="listing">
-        <tal:foldercontents define="
-            getInfoFor nocall:view/getInfoFor;
-            is_a_topic view/is_a_topic;
-            normalizeString nocall:view/normalizeString;
-            show_about view/show_about;
-            toLocalizedTime nocall:view/toLocalizedTime;
-            use_view_action view/use_view_action;
-            plone_view nocall:context/@@plone;
-            limit_display limit_display|request/limit_display|nothing;
-            more_url more_url|request/more_url|string:folder_contents;
-            folderContents folderContents|nothing; folderContents python:folderContents or is_a_topic and context.queryCatalog(batch=True) or context.getFolderContents(batch=True, b_size=limit_display or 100);
-            over_limit python: limit_display and len(folderContents) > limit_display;
-            folderContents python: (over_limit and folderContents[:limit_display]) or folderContents;
-            batch folderContents;">
-        <tal:listing condition="folderContents">
+        <tal:foldercontents define="folderContents view/folderContents;">
 
-            <dl>
+        <tal:listing condition="folderContents">
+            <dl tal:define="
+                getInfoFor nocall:view/getInfoFor;
+                normalizeString nocall:view/normalizeString;
+                show_about view/show_about;
+                toLocalizedTime nocall:view/toLocalizedTime;
+                use_view_action view/use_view_action;
+                plone_view nocall:context/@@plone;">
                 <tal:entry tal:repeat="item folderContents">
                 <tal:block tal:define="
                     item_url item/getURL|item/absolute_url;
@@ -154,23 +146,16 @@
                 </tal:block>
                 </tal:entry>
             </dl>
-            
-            <!-- Navigation -->
-            <tal:block condition="python:not is_a_topic and not batch">
-                <div metal:use-macro="context/batch_macros/macros/navigation" />
-            </tal:block>
-            
+
         </tal:listing>
-        <metal:empty metal:define-slot="no_items_in_listing">
-            <p class="discreet"
-               tal:condition="not: folderContents"
-               i18n:translate="description_no_items_in_folder">
-                There are currently no items in this folder.
-            </p>
-        </metal:empty>
+
+        <p class="discreet"
+           tal:condition="not: folderContents"
+           i18n:translate="description_no_items_in_folder">
+            There are currently no items in this folder.
+        </p>
 
         </tal:foldercontents>
-        </metal:listingmacro>
 
         <div tal:replace="structure provider:plone.belowcontentbody" />
 
